--- a/podlove-web-player/podlove-web-player-embed.css
+++ b/podlove-web-player/podlove-web-player-embed.css
@@ -448,6 +448,7 @@ html, body {
 	bottom: 0;
 	height: 100% !important;
 	width: 100% !important;
+	padding: 0;
 }
 .mediaelementjs_player_container {
 	top: 64px;
